# langword

./: meson.build  org.example.App.json  org.gnome.LangWord.json
data/: meson.build  org.example.App.desktop.in  org.example.App.gschema.xml  org.gnome.LangWord.appdata.xml.in  org.gnome.LangWord.desktop.in  org.gnome.LangWord.gschema.xml
data/icons/: meson.build
po/: POTFILES  base.pot  meson.build  ru.po
src/: langword.gresource.xml  langword.in  main.py  meson.build  window.py  window.ui
